Store locations and results stories

--- a/m4r/views/edit.erb
+++ b/m4r/views/edit.erb
@@ -28,6 +28,11 @@ label:after { content: ": " }
 
   <label for="page[locations_count]"># of Locations</label><input type="text" name="page[locations_count]" value="<%= @page.locations_count %>" id="locations_count"><br />  
 
+  <label for="data[locations]">Locations (optional)</label><br />
+  <textarea name="data[locations]" rows="8" cols="60"><%= @page.data[:locations] || "" %></textarea><br />
+  <label for="data[results]">Result Links</label><br />
+  <textarea name="data[results]" rows="8" cols="60"><%= @page.data[:results] || "" %></textarea><br />
+
   <label for="page[overview]">Page Overview (optional)</label><br />
   <textarea name="page[overview]" rows="8" cols="60"><%= @page.overview || "" %></textarea><br />
   <label for="page[content]">Page Content (optional)</label><br />
