--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -100,9 +100,14 @@ if(typeof(F1)=='undefined') {F1 = {};}
           self.sector_codes[sector.sector_code] = sector;
      });
      if(map_id != null && map_id.length != 0){
+         var map_engine = "flash";
+         if(projects.length > 2000) map_engine="Sputnik";
+         // if("no_flash") map_engine="javascript";
+         
          this.map = new F1.Maker.Map( { dom_id:"wb_map",map_id:map_id, 
          uiZoom: true,uiLayers: false,uiLegend: false,uiStyles: true,
          uiHeader: true,hideGCLogo: true,hideGILogo: true,
+         view: map_engine,
          core_host:  proxy_host + '/', finder_host:proxy_host + '/', maker_host: proxy_host + '/',
          onload: function() { self.loadedMap() }
          });
