--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -1,12 +1,10 @@
 <div id="layerinfo">
   <ul>
     <li class="">
-    <% unless @page[:name] == "World" || (@region == @page) %>Choose the indicator data and portfolio projects below to investigate mapping for results:<% else %>
+    <% unless %w{world region}.include?(@page.page_type) %>Choose the indicator data and portfolio projects below to investigate mapping for results:<% else %>
     Investigate World Bank projects in currently highlighted countries using "Locations" tab.<% end %></li>
   </ul>
 </div>
-<p>Keys: <%= @page.data.keys %></p>
-<p>Locations? <%= @page.data[:locations].inspect %></p>
 <div class="dropmenuholder">
   <ul class="dropmenu">
     <li class="first" title="Zoom to Locations"><a href="#" onclick="return false;">LOCATIONS</a>
@@ -20,14 +18,14 @@
             <% end %>
           <% end  %>              
         <% elsif(!@page.data[:locations].nil?) %>
-            <%= menu_options(@page[:adm1]) %>
+            <%= menu_options(@page.data[:locations]) %>
         <% end %>
       </ul>
     </li>
   </ul>
   <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %>">
     <li class="first" title="Layer: Indicators"><a href="#" id="layercontrol_indicators" onclick="wb.setIndicator(); return false">INDICATORS</a>
-      <% unless @page[:name] == "World" || (@region == @page) %>
+      <% unless %w{world region}.include?(@page.page_type) %>
       <ul>
         <% @page[:indicators].each do |indicator| %>
         <li><a href="#" onclick="wb.setIndicator('<%= indicator %>'); return false"><%= indicator %></a></li>
@@ -38,7 +36,7 @@
   </ul>
   <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %>">
     <li class="first" title="Layer: Projects"><a href="#" id="layercontrol_projects" onclick="return wb.toggleSector('none',false)">PROJECTS</a>
-      <% unless @page[:name] == "World" || (@region == @page) %>
+      <% unless %w{world region}.include?(@page.page_type) %>
       <ul>
         <li><a href="#" onclick="wb.toggleSector('counts_admin1', true); return false">Number by Province</a></li>
         <li><a href="#" onclick="wb.toggleSector('counts_admin2', true); return false">Number by District</a></li>
@@ -50,11 +48,12 @@
   </ul>
   <ul class="dropmenu <%= 'inactive' if @page[:name] == "World" || (@region == @page) %> ">
     <li title=""><a href="#" onclick="return false">RESULTS</a>
-      <% unless @page[:name] == "World" || (@region == @page) %>
+      <% if @page.data.include?(:results) && @page.data[:results].length > 0 %>
       <ul>
         <% @page.data[:results].each do |result| %>
+        <% result.symbolize_keys! %>
         <li><a href="<%= result[:link] %>" target="_new"><%= result[:name] %></a></li>
-        <% end if false %>
+        <% end %>
       </ul>
       <% end %>
     </li>
