--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -100,7 +100,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
           self.sector_codes[sector.sector_code] = sector;
      });
      if(map_id != null && map_id.length != 0){
-         var map_engine = "flash";
+         var map_engine = "Wrapper";
          if(projects.length > 2000) map_engine="Sputnik";
          // if("no_flash") map_engine="javascript";
          
