--- a/m4r/views/edit.erb
+++ b/m4r/views/edit.erb
@@ -38,9 +38,12 @@ label:after { content: ": " }
   
   <fieldset>
     <legend>Page description (optional)</legend>
+
+  <label for="data[indicators]">Indicators (optional)</label><br />
+  <textarea name="data[indicators]" rows="1" cols="60"><%= (@page.data[:indicators].nil? ? nil : @page.data[:indicators].to_json) %></textarea><br />
   
   <label for="data[locations]">Locations (optional)</label><br />
-  <textarea name="data[locations]" rows="8" cols="60"><%= @page.data[:locations].to_json %></textarea><br />
+  <textarea name="data[locations]" rows="8" cols="60"><%= (@page.data[:locations].nil? ? nil : @page.data[:locations].to_json) %></textarea><br />
   <label for="data[results]">Result Links</label><br />
   <textarea name="data[results]" rows="8" cols="60"><%= (@page.data[:results].nil? ? nil : @page.data[:results].to_json) %></textarea><br />
 
