--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -10,6 +10,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/style.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/landing.css" />
                                                            
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
@@ -91,8 +92,10 @@
     <!-- /#header -->
 
     <%= partial :overview %>
+    <div id="content-wrapper">
     <%= yield  %>
-
+    </div>
+    <%# partial :highlights  %>
     <%= partial :footer %>
 </div>
 <!-- /#wrapper -->
