--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -20,10 +20,10 @@
   <%# partial :infowindow %>
 </div>
 
-<%= partial :charts unless @page.page_type == "project" %>
+<%= partial :charts unless @page.page_type == "project" || @page.page_type == "region" %>
 <%= partial :initialize unless @page.new_record? %>
 
-<%= partial :projects_table unless %w{world project}.include?(@page.page_type) %>
+<%= partial :projects_table if @page.page_type == "project" %>
 <% unless @page.page_type == "project" %>
 <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 <% end %>
