--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -15,7 +15,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
 
-<!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script> -->
+<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script>
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
