--- a/m4r/views/initialize.erb
+++ b/m4r/views/initialize.erb
@@ -4,7 +4,7 @@
   var wb = new F1.WorldBank();
   <% if @page.page_type == "country" %>
 
-  var projects = [<%= @projects.collect do |project_id, project|
+  var projects = [<%= (@projects || []).collect do |project_id, project|
          if(project["totalamt"].to_i == 0) 
             project["totalamt"] = project["grantamt"]
          end
@@ -12,7 +12,7 @@
          "{" + (PROJECT_FIELDS + ["sector_code"]).flatten.collect {|key| "#{key}: #{cleanup_attributes(key, project[ key == 'sector_code' ? 'mjsector1' : key])}"}.join(",") + "}"
        end.join("\n,") %>];
       
-  wb.init(<%= @page[:map].to_s %>,  "<%= @page.name.to_s %>", "<%= @page.region.to_s %>", {projects_count: '<%= @page.projects_count %>', locations_count: '<%= @page.locations_count %>', projects: projects, locations_layer: <%= @page.locations_layer || 0 %>, indicators: [<%= (@page.data[:indicators] || []).collect {|i| "'#{i}'"}.join(",") %>]});
+  wb.init(<%= @page[:map].to_s %>,  "<%= @page.name.to_s %>", "<%= @page.region.to_s %>", {projects_count: '<%= @page.projects_count %>', locations_count: '<%= @page.locations_count %>', projects: projects, locations_layer: <%= @page.locations_layer || 0 %>, indicators: [<%= (@page.data[:indicators] || []).collect {|i| "'#{i}'"}.join(",") %>], layers: <%= @page.data[:layers].to_json %>});
   <% elsif %w{country region}.include?(@page.page_type) %>
   var projects = [];
   var productline = <%= @financing[:productline].to_json %>;
