--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -15,7 +15,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
 
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script> -->
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -29,12 +29,13 @@
   <script type="text/javascript" src="/js/effects_002.js"></script>
   <script type="text/javascript" src="/js/effects.js"></script>  
 
-<script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script> -->
+<script type="text/javascript" charset="utf-8" src="/js/tmpl.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
 <% if PLATFORM_API_URL =~ /geocommons/ %>
 <script src="<%= PLATFORM_API_URL %>/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
 <% else %>
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
 <script src="<%= PLATFORM_API_URL %>/javascripts/raphael.js?1279556727" type="text/javascript"></script>
 <script src="<%= PLATFORM_API_URL %>/javascripts/g.raphael.js?1279556727" type="text/javascript"></script>
