--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -11,7 +11,12 @@ if(typeof(F1)=='undefined') {F1 = {};}
         }
     };
 
-
+  Array.prototype.first = function() {
+      return this[0];
+  };
+  Array.prototype.clone = function() {
+      return this.slice();
+  };
   Object.size = function(obj) {
       var size = 0, key;
       for (key in obj) {
@@ -76,7 +81,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
       this.current_indicator = (country_attrs.indicators != undefined && country_attrs.length > 0) ? country_attrs.indicators[0] : null;
       
       
-      this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-on.png","Education":"<%= PLATFORM_API_URL %>/images/icons/worldbank/education-on.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-on.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-on.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/worldbank/health-on.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-on.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/worldbank/public-on.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-on.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/worldbank/water-on.png"};
+      this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-8.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-8.png","Education":"<%= PLATFORM_API_URL %>/images/icons/worldbank/education-8.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-8.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-8.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/worldbank/health-8.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-8.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/worldbank/public-8.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-8.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/worldbank/water-8.png"};
       var color_index = 3;
       this.sectors = {
         "agriculture": {name: "Agriculture, fishing, and forestry", sector_code: "AX", color: self.fadeHex("#8bb131","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png"}, 
@@ -102,7 +107,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
      });
      if(map_id != null && map_id.length != 0){
          var map_engine = "Wrapper_181";
-         // if(self.country_attrs["locations_count"] > 1000) map_engine="Sputnik";
+         //if(self.country_attrs["locations_count"] > 1000) map_engine="Sputnik";
          // if("no_flash") map_engine="javascript";
          
          this.map = new F1.Maker.Map( { dom_id:"wb_map",map_id:map_id, 
@@ -198,6 +203,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
             self.map.swf.addFilter(self.stylelayers["Project Counts"].order, {expression: "$[admprecision] == 'ADM1'"});
         }
         self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);
+        refreshCharts = false;        
         jq('#layercontrol_sectors').html("Project Count");
       } else if(sector == 'counts_admin2') {
           if(self.stylelayers["Project Counts"] != undefined){
@@ -205,12 +211,14 @@ if(typeof(F1)=='undefined') {F1 = {};}
             self.map.swf.clearFilters(self.stylelayers["Project Counts"].order);
             self.map.swf.addFilter(self.stylelayers["Project Counts"].order, {expression: "$[admprecision] == 'ADM2'"});
         }
-        self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);        
+        self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);
+        refreshCharts = false;
         jq('#layercontrol_sectors').html("Project Count");
       } else if(sector == 'counts') {
         if(self.stylelayers["Project Counts"] != undefined)
             self.map.showLayer(self.stylelayers["Project Counts"].order, visible);
         self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);
+        refreshCharts = false;        
       } else if(sector == null) {
         self.map.showLayer(self.stylelayers["Project Locations"].order, false);
         if(self.stylelayers["Project Counts"] != undefined)
@@ -672,7 +680,9 @@ if(typeof(F1)=='undefined') {F1 = {};}
       }
       // infowindow
       if(self.stylelayers["Project Locations"] != undefined) {
-        self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[mjsector 1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$[mjsector 1]\nTotal Amount: $ $[total amt] million"}, {title: "Location", type: "text", value: "Province: $[adm1]\nDistrict: $[adm2]\n\n$[precision description]"}]});
+        self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[mjsector 1]", tabs:[{title: "About", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$[mjsector 1]\nTotal Amount: $ $[total amt] million\n\n$[development objectives]"}, {title: "Location", type: "text", value: "Province: $[adm1]\nDistrict: $[adm2]\n\n$[precision description]"},
+        {title:"Results", type: "text", value "No Results Stories Available."}
+        ]});
       }
       if(self.stylelayers["Project Counts"] != undefined) {
         self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Projects: $[project count]", subtitle: "", tabs:[{title:"About", type:"text", value: "There are $[project count] active projects in the region."}]});
