--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,7 +1,7 @@
-    <div id="share">
-        <% unless (!@page.nil? && @page[:name] == "World") %><a href="/" id="world_link">&laquo; back to World Map</a><% end %>
-      <ul>
-        <% if !@page.nil? && @page[:name] != "World" %><li class="download"><a href="" id="download_data">DOWNLOAD</a></li><% end %>
-        <li class="simpleshare_link"><a href="#" title="Share">SHARE</a></li>
+  <div id="share">
+  	<ul>
+          <li class="twitter"><a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="http://worldbank.org" data-related="worldbank">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
+          <li class="facebook"><a href="#" title="Facebook"></a></li>
+          <li class="share"><a title="share" href="index_dropdowns.html"><span></span>SHARE</a></li>
       </ul>
-    </div>
+  </div>
