--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -5,7 +5,7 @@
   <div id="wb_map_wrapper" style="z-index: -1; height: 514px; 958px">
   <div id="wb_map" class="" style="height: 520px"></div>
   </div>
-  <div id="map_console">
+  <!-- <div id="map_console">
       <div class="console-title">
         <p id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -15,8 +15,8 @@
         <p class="loaded" style="display: none" title="">active projects working in</p>
         <p class="loaded" style="display: none" title="Project locations as of December 31, 2010">mapped project locations</p>
       </div>    
-      <%= partial :layer_controls %>
-  </div>
+      <%# partial :layer_controls %>
+  </div> -->
   <%# partial :infowindow %>
 </div>
 
