--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -19,6 +19,6 @@
             </ul>
           </li>
         </ul>
+      <%= partial :summary %>
       </div>
-      <%= partial :sector_controls unless @page[:name] == "World" %>
     </div>
