--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -11,6 +11,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/favicon.ico">
+    <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
     <link rel="stylesheet" href="/assets/css/mapping.css">
     <%= partial :javascript %>
 </head>
