--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -81,19 +81,19 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  this.current_indicator = (country_attrs.indicators != undefined && country_attrs.length > 0) ? country_attrs.indicators[0] : null;
 	  
 	  
-	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-8.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-8.png","Education":"<%= PLATFORM_API_URL %>/images/icons/worldbank/education-8.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-8.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-8.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/worldbank/health-8.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-8.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/worldbank/public-8.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-8.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/worldbank/water-8.png"};
+	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/round/agriculture-8.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/round/communication-8.png","Education":"<%= PLATFORM_API_URL %>/images/icons/round/education-8.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/round/energy-8.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/round/finance-8.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/round/health-8.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/round/industry-8.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/round/public-8.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/round/transportation-8.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/round/water-8.png"};
 	  var color_index = 3;
 	  this.sectors = {
-		"agriculture": {name: "Agriculture, fishing, and forestry", sector_code: "AX", color: self.fadeHex("#8bb131","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png"}, 
-		"communications": {name: "Information and communications", sector_code: "CX", color: self.fadeHex("#395f8f","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "communications", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-on.png"},
-		"education": {name: "Education", sector_code: "EX", color: self.fadeHex("#eebd00","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "education", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/education-on.png"}, 
-		"energy": {name: "Energy and mining", sector_code: "LX", color: self.fadeHex("#880000","#FFFFFF",10)[color_index],	funding: 0, projects: [], activities: 0, shortname: "energy", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-on.png"},
-		"finance": {name: "Finance", sector_code: "FX", color: self.fadeHex("#40823f","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "finance", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-on.png"},
-		"health": {name: "Health and other social services", sector_code: "JX", color: self.fadeHex("#c23001","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "health", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/health-on.png"},
-		"industry": {name: "Industry and trade", sector_code: "YX", color: self.fadeHex("#7f4410","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "industry", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-on.png"},
-		"public": {name: "Public Administration, Law, and Justice", sector_code: "BX", color: self.fadeHex("#8060a4","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "public", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/public-on.png"},
-		"water": {name: "Water, sanitation and flood protection", sector_code: "WX", color: self.fadeHex("#369fd0","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "water", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/water-on.png"},
-		"transportation": {name: "Transportation", sector_code: "TX", color: self.fadeHex("#d28807","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "transportation", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-on.png"}};
+		"agriculture": {name: "Agriculture, fishing, and forestry", sector_code: "AX", color: self.fadeHex("#8bb131","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/round/agriculture-on.png"}, 
+		"communications": {name: "Information and communications", sector_code: "CX", color: self.fadeHex("#395f8f","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "communications", icon: "<%= PLATFORM_API_URL %>/images/icons/round/communication-on.png"},
+		"education": {name: "Education", sector_code: "EX", color: self.fadeHex("#eebd00","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "education", icon: "<%= PLATFORM_API_URL %>/images/icons/round/education-on.png"}, 
+		"energy": {name: "Energy and mining", sector_code: "LX", color: self.fadeHex("#880000","#FFFFFF",10)[color_index],	funding: 0, projects: [], activities: 0, shortname: "energy", icon: "<%= PLATFORM_API_URL %>/images/icons/round/energy-on.png"},
+		"finance": {name: "Finance", sector_code: "FX", color: self.fadeHex("#40823f","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "finance", icon: "<%= PLATFORM_API_URL %>/images/icons/round/finance-on.png"},
+		"health": {name: "Health and other social services", sector_code: "JX", color: self.fadeHex("#c23001","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "health", icon: "<%= PLATFORM_API_URL %>/images/icons/round/health-on.png"},
+		"industry": {name: "Industry and trade", sector_code: "YX", color: self.fadeHex("#7f4410","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "industry", icon: "<%= PLATFORM_API_URL %>/images/icons/round/industry-on.png"},
+		"public": {name: "Public Administration, Law, and Justice", sector_code: "BX", color: self.fadeHex("#8060a4","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "public", icon: "<%= PLATFORM_API_URL %>/images/icons/round/public-on.png"},
+		"water": {name: "Water, sanitation and flood protection", sector_code: "WX", color: self.fadeHex("#369fd0","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "water", icon: "<%= PLATFORM_API_URL %>/images/icons/round/water-on.png"},
+		"transportation": {name: "Transportation", sector_code: "TX", color: self.fadeHex("#d28807","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "transportation", icon: "<%= PLATFORM_API_URL %>/images/icons/round/transportation-on.png"}};
 
 	  this.sector_names = {};
 	  this.sector_codes = {};
@@ -465,6 +465,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 		jq.each(data, function(index, project) {
 			project["even"] = ((index+1) % 2 == 0) ? "row_even" : "row_odd";
+			console.log(project)
 			table += tmpl(table_templates.project, project);
 		});
 		table += "</tbody></table>"
