--- a/m4r/views/summary.erb
+++ b/m4r/views/summary.erb
@@ -1,3 +1,5 @@
+<div id="map-summary-container">
         <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
         	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">total active projects working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">mapped locations</span>
         </h1>
+</div>        
