--- a/m4r/public/assets/css/mapping.css
+++ b/m4r/public/assets/css/mapping.css
@@ -56,7 +56,7 @@ a:hover {
 }
 .bigNumber {
     font-family: Georgia, serif;
-    font-size: 26px;
+    font-size: 20px;
     color: #970001;
     font-weight: bold;
     margin-top: 16px;
@@ -306,11 +306,12 @@ ul.links li, ul.links li a{
 	padding-right: 390px;
 	z-index: 1;	
 }
-#map-summary{
+#map-summary-container{
 	font-size: 30px;
 	padding: 11px 0;
+	height: 23px;
 }
-.ie7 #map-summary{
+.ie7 #map-summary-container{
 	margin: -5px 0 7px 0;	
 }
 #map-summary .smallHdr{
